syntax = "proto3";

option csharp_namespace = "CarService.Proto";

service GrpcCar {
    rpc CheckCarExists (CheckCarRequest) returns (CheckCarResponse);
    rpc NotifyDeleteCarModelEntity (NotifyDeleteCarModelRequest) returns (NotifyDeleteCarModelResponse);
    rpc NotifyDeleteCarImageEntity (NotifyDeleteCarImageRequest) returns (NotifyDeleteCarImageResponse);
    rpc GetCarData (GetCarDataRequest) returns (GetCarDataResponse);
}

message NotifyDeleteCarModelRequest {
    repeated int32 carModelIds = 1 [packed=true];
}

message NotifyDeleteCarModelResponse {}

message NotifyDeleteCarImageRequest {
    int32 carImageId = 1;
}

message NotifyDeleteCarImageResponse {}

message CheckCarRequest {
    int32 carId = 1;
}

message CheckCarResponse {
    int32 exists = 1;
}
message GetCarDataRequest {
    int32 carId = 1;
}

message GetCarDataResponse {
    float pricePerHour = 1;
}